# iyou_name_rust

./: .gitignore  CI_CD_GUIDE.md  COMMIT_MESSAGE.md  Cargo.toml  DEPLOYMENT_READY.md  Dockerfile  FINAL_SUMMARY.md  PROJECT_STATUS.md  PYTHON_INTEGRATION_ROADMAP.md  README.md  REFACTORING_FEATS.md  TEST_MATRIX.md  build.rs  pyproject.toml  test_json_serialization.py  verify_bridge.py
.cargo/: config.toml
.github/workflows/: build-wheels.yml
examples/: simple_generation.rs
src/: lib.rs  python_module.rs
src/core/: ancestor_data.rs  constants.rs  coordinate_system.rs  data_types.rs  error.rs  mod.rs
src/generators/: gen1.rs  gen2.rs  mod.rs  unified_generator.rs
src/generators/specs/: mod.rs  radial_specs.rs  sunbeam_specs.rs
src/generators/strategies/: gen1.rs  gen2.rs  mod.rs  radial.rs  strategy_trait.rs  sunbeam.rs
src/rendering/: abbreviator.rs  mod.rs  text_renderer.rs
src/utils/: mod.rs
tests/integration/: test_basic.rs  test_radial.rs  test_sunbeam.rs  test_unified_generator.rs
tests/unit/: test_coordinates.rs
