[package]
name = "iyou_chart_kernel"
version = "0.1.0"
edition = "2021"
authors = ["iyou_name Team"]
description = "High-performance family tree chart generation engine"
license = "MIT"

[dependencies]
magick_rust = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
approx = "0.5"
